compiler/tests/should-fail/InsecureControlFlowConfidentiality.via
/* InsecureControlFlowError */

fun main() {
    val secret: bool{(A ∧ B)->} = true;
    if (secret) {
        val public: int{A->} = 42;
    }
}
